Simplify projects unique identifier -- use res_id
