# api/definitions/api_definition.json
@@ -266,7 +266,7 @@
         }
       }
     },
-    "/projects/single?res={:res_id}&it={:it_key}": {
+    "/projects/{:res_id}": {
       "get": {
         "description": "Returns a single project resource, selected by its resource ID and in-triage key",
         "operationId": "get_project",
@@ -301,7 +301,7 @@
         }
       }
     },
-    "/projects/single/register-interest?res={:res_id}&it={:it_key}": {
+    "/projects/{:res_id}/register-interest": {
       "post": {
         "description": "User registers interest in a particular project",
         "operationId": "post_project_register_interest",
@@ -393,13 +393,13 @@
         "items": {
           "type": "object",
           "properties": {
-            "it_key": {
-              "type": "string",
-              "description": "Unique identifier for the project"
-            },
             "res_id": {
               "type": "string",
-              "description": "Unique identifier for the resource"
+              "description": "Unique identifier from Jira for the resource (aka the 'project' in the app) -- this is the unique ID to use to identify a record"
+            },
+            "it_key": {
+              "type": "string",
+              "description": "Identifier from Jira for the wider task (e.g. a website build), which may have more than one resource (role)"
             },
             "name": {
               "type": "string",
